# rust-blog-playground

client/: Cargo.toml  README.md  index.html  index.scss
client/src/: app.rs  main.rs
server/: index.js  package-lock.json  package.json
