[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"
description = "Simple blog app"
readme = "README.md"
repository = "https://github.com/YurySolovyov/rust-blog-client"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = "0.19"
yew-router = "0.16"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
