[package]
name = "rust-blog"
version = "0.1.0"
edition = "2021"
description = "Simple blog app"
readme = "README.md"
repository = "https://github.com/YurySolovyov/rust-blog-client"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = "0.19"
yew-router = "0.16"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-console-logger = "0.1.1"
web-sys = { version = "0.3", features = [ "HtmlInputElement", "HtmlTextAreaElement" ] }
uuid = { version = "1.1.1", features = [ "v4", "js" ] }
